# trashprivate

./: Cargo.toml  flake.nix
src/: api.rs  cli.rs  commands.rs  main.rs
src/data/: get.rs  mod.rs
src/models/: crypto.rs  db.rs
src/train/: start.rs
