[package]
name = "trash-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
smartcore = { version = "0.3.2", features = ["datasets", "serde"] }
toml = "0.8.19"
ureq = "2.10.1"
